changed package name

--- a/progressivis/server/templates/index.html
+++ b/progressivis/server/templates/index.html
@@ -57,7 +57,7 @@
 
     <div class="container">
 
-      <div class="progressive">
+      <div class="progressivis">
         <h1>Progressive Analytics and Visualization</h1>
         <p class="lead">Analyze, explore, and visualize your large and complex data in a progressive way.</p>
       </div>
