--- a/progressivis/server/templates/progressivis.html
+++ b/progressivis/server/templates/progressivis.html
@@ -13,7 +13,8 @@ Progressivis Server
 {% endblock %}
 
 {% block content %}
-<div class="col-md-12">
-  <h1>test</h1>
-</div>
+ <div class="starter-template">
+   <h1>Progressive Modules</h1>
+   <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+ </div>
 {% endblock %}
