--- a/progressivis/server/templates/_page_base.html
+++ b/progressivis/server/templates/_page_base.html
@@ -4,10 +4,11 @@
   <link href="{{ url_for('progressivis.server.progressivis_file', filename='css/progressivis.css') }}" rel="stylesheet">
   {% block extra_scripts %}
   {% endblock %}
-  <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/progressivis.js') }}"></script>
   <script type="text/javascript">
+    $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
     {{ self.script() }}
   </script>
+  <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/progressivis.js') }}"></script>
 {% endblock %}
 
 {% block body %}
