--- a/progressivis/server/templates/scheduler.html
+++ b/progressivis/server/templates/scheduler.html
@@ -34,27 +34,17 @@ $(document).ready(scheduler_ready);
   <div id='error'></div>
 
 <div>
-  <!-- Nav tabs -->
-  <ul id='module-tabs' class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#scheduler" aria-controls="scheduler" role="tab" data-toggle="tab">Scheduler</a></li>
-  </ul>
-
-  <!-- Tab panes -->
-  <div id="module-tabs-contents" class="tab-content">
-    <div role="tabpanel" class="tab-pane active static" id="scheduler">
-      <div id='scheduler'>
-	<div class="table-responsive">
-	  <table id='scheduler-modules' class="table table-striped">
-	    <thead>
-	      <tr><th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th></tr>
-	    </thead>
-	    <tbody>
-	    </tbody>
-	  </table>
-      </div>
+  <div id='scheduler'>
+    <div class="table-responsive">
+      <table id='scheduler-modules' class="table table-striped table-bordered table-hover table-condensed">
+	<thead>
+	  <tr><th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th></tr>
+	</thead>
+	<tbody>
+	</tbody>
+      </table>
     </div>
   </div>
-
 </div>
 
 
