--- a/progressivis/server/templates/_navbar.html
+++ b/progressivis/server/templates/_navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">{{ title }}</a>
+      <a class="navbar-brand" href="#">ProgressiVis</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
