--- a/progressivis/server/templates/scatterplot.html
+++ b/progressivis/server/templates/scatterplot.html
@@ -29,8 +29,8 @@ $(document).ready(scatterplot_ready);
   <div id='error'></div>
 
 <div>
-  <div id='scatterplot'>
-  </div>
+  <div id='scatterplot'></div>
+  <div id='module'></div>
 </div>
 
 
