--- a/progressivis/server/templates/_navbar.html
+++ b/progressivis/server/templates/_navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><a href="{{ url_for('static', filename='img/eye-progressive.png')}}"  alt='ProgressiVis Logo'></a>
+      <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='img/progressivis.png')}}"  alt='ProgressiVis Logo'></img></a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
