start to work but heatmap not updated in SVG yet

--- a/progressivis/server/static/css/progressivis.css
+++ b/progressivis/server/static/css/progressivis.css
@@ -1,7 +1,23 @@
 body {
   padding-top: 50px;
 }
+
 .starter-template {
   padding: 40px 15px;
   text-align: center;
+}
+
+svg {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.dot {
+  stroke: #000;
 }
