--- a/progressivis/server/templates/scatterplot.html
+++ b/progressivis/server/templates/scatterplot.html
@@ -28,9 +28,18 @@ $(document).ready(scatterplot_ready);
 
   <div id='error'></div>
 
+<!-- Nav tabs -->
+  <ul id='nav-tabs' class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#scatterplot" aria-controls="scatterplot" role="tab" data-toggle="tab">Scatterplot</a></li>
+    <li role="presentation"><a href="#module" aria-controls="module" role="tab" data-toggle="tab">Module</a></li>
+  </ul>
+
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div role="tabpanel" class="tab-pane active" id="scatterplot"><div id='scatterplot'></div></div>
+    <div role="tabpanel" class="tab-pane" id="module"><div id='module'></div></div>
+  </div>
 <div>
-  <div id='scatterplot'></div>
-  <div id='module'></div>
 </div>
 
 
