--- a/progressivis/server/templates/_navbar.html
+++ b/progressivis/server/templates/_navbar.html
@@ -1,5 +1,5 @@
 {% macro navbar(title) %}
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -14,6 +14,16 @@
       <ul class="nav navbar-nav">
         {{ caller() }}
       </ul>
+      <button id='start' type="button" class="disabled btn btn-default navbar-btn" aria-label="Start Button">
+        <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+      </button>
+      <button id='stop' type="button" class="disabled btn btn-default navbar-btn" aria-label="Stop Button">
+        <span class="glyphicon glyphicon-stop" aria-hidden="true"></span>
+      </button>
+      <button id='run_number' type="button" class="disabled btn btn-default navbar-btn" aria-label="Run number">
+        000
+      </button>
+      <p class="navbar-text"></p>
     </div><!--/.nav-collapse -->
   </div>
 </nav>
