IIFE, fix standalone graph page

--- a/progressivis/server/templates/module_graph.html
+++ b/progressivis/server/templates/module_graph.html
@@ -63,7 +63,7 @@ Progressivis Server
 {% endblock %}
 
 {% block script %}
-$(document).ready(graph_ready);
+$(document).ready(module_graph.ready);
 {% endblock %}
 
 {% block content %}
