--- a/progressivis/server/templates/scatterplot.html
+++ b/progressivis/server/templates/scatterplot.html
@@ -36,7 +36,16 @@ $(document).ready(scatterplot_ready);
 
   <!-- Tab panes -->
   <div class="tab-content">
-    <div role="tabpanel" class="tab-pane active" id="scatterplot"><div id='scatterplot'></div></div>
+    <div role="tabpanel" class="tab-pane active" id="scatterplot">
+      <div id='scatterplot'>
+        <svg>
+          <filter id="gaussianBlur" width="100%" height="100%" x="0" y="0">
+            <feGaussianBlur id="gaussianBlurElement" in="SourceGraphic" stdDeviation="0" />
+          </filter>
+        </svg>
+        <label>Sigma <input id="filterSlider" type="range" value="0" min="0" max="5" step="0.1" /></label>
+      </div>
+    </div>
     <div role="tabpanel" class="tab-pane" id="module"><div id='module'></div></div>
   </div>
 <div>
