--- a/progressivis/server/templates/scatterplot.html
+++ b/progressivis/server/templates/scatterplot.html
@@ -41,7 +41,12 @@ $(document).ready(scatterplot_ready);
         <svg>
           <filter id="gaussianBlur" width="100%" height="100%" x="0" y="0">
             <feGaussianBlur id="gaussianBlurElement" in="SourceGraphic" stdDeviation="0" />
-          </filter>
+            <feComponentTransfer>
+              <feFuncR type="table" tableValues="1 1 1"/>
+              <feFuncG type="table" tableValues="0.93 0.001 0"/>
+              <feFuncB type="table" tableValues="0.63 0.001 0"/>
+            </feComponentTransfer>
+          </filter>          
         </svg>
         <label>Sigma <input id="filterSlider" type="range" value="0" min="0" max="5" step="0.1" /></label>
       </div>
