--- a/progressivis/server/templates/scatterplot.html
+++ b/progressivis/server/templates/scatterplot.html
@@ -8,6 +8,7 @@ Scatterplot for module {{id}}
 <script src="{{ url_for('static', filename='jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
 <script src="{{ url_for('static', filename='d3.min.js') }}"></script>
+<script src="{{ url_for('static', filename='chroma.min.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/module.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/scatterplot.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/colormaps.js') }}"></script>
@@ -50,7 +51,8 @@ $(document).ready(scatterplot_ready);
           </filter>          
         </svg>
         <label>Sigma <input id="filterSlider" type="range" value="0" min="0" max="5" step="0.1" /></label>
-        <select id="colorMapSelect"></select>
+        <br/>
+        <label>Color map <select id="colorMapSelect"></select></label>
       </div>
     </div>
     <div role="tabpanel" class="tab-pane" id="module"><div id='module'></div></div>
