--- a/progressivis/server/templates/scatterplot.html
+++ b/progressivis/server/templates/scatterplot.html
@@ -15,6 +15,7 @@ Scatterplot for module {{id}}
 <script src="{{ url_for('static', filename='d3.min.js') }}"></script>
 <script src="{{ url_for('static', filename='chroma.min.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/module.js') }}"></script>
+<script src="{{ url_for('progressivis.server.progressivis_file', filename='js/history.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/scatterplot.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/colormaps.js') }}"></script>
 {% endblock %}
