--- a/progressivis/server/static/css/scatterplot.css
+++ b/progressivis/server/static/css/scatterplot.css
@@ -1,3 +1,11 @@
+#prevImages {
+  border-width: 1px;
+  border-color: black;
+  border-style: solid;
+  width: 100%;
+  height: 120px;
+}
+
 #prevImages img {
   margin-left: 5px;
 }
