--- a/progressivis/server/templates/scatterplot.html
+++ b/progressivis/server/templates/scatterplot.html
@@ -56,6 +56,7 @@ $(document).ready(scatterplot_ready);
             </feComponentTransfer>
           </filter>          
         </svg>
+        <p><button class='btn btn-default' id='filter' type="button" aria-label='Filter button'>Filter</button><br/>
         <label>Sigma <input id="filterSlider" type="range" value="0" min="0" max="5" step="0.1" /></label>
         <br/>
         <label>Color map <select id="colorMapSelect"></select></label>
