--- a/progressivis/server/templates/scatterplot.html
+++ b/progressivis/server/templates/scatterplot.html
@@ -57,9 +57,9 @@ $(document).ready(scatterplot_ready);
           </filter>          
         </svg>
         <p><button class='btn btn-default' id='filter' type="button" aria-label='Filter button'>Filter</button><br/>
-        <label>Sigma <input id="filterSlider" type="range" value="0" min="0" max="5" step="0.1" /></label>
+        <div class="form-group"><label>Sigma <input id="filterSlider" type="range" value="0" min="0" max="5" step="0.1" /></label></div>
         <br/>
-        <label>Color map <select id="colorMapSelect"></select></label>
+        <div class="form-group"><label>Color map <select id="colorMapSelect" class="form-control"></select></label></div>
         <div id="prevImages"></div>
       </div>
     </div>
