ensure id uniqueness in template

--- a/progressivis/server/templates/scatterplot.html
+++ b/progressivis/server/templates/scatterplot.html
@@ -38,13 +38,13 @@ $(document).ready(scatterplot_ready);
 
 <!-- Nav tabs -->
   <ul id='nav-tabs' class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#scatterplot" aria-controls="scatterplot" role="tab" data-toggle="tab">Scatterplot</a></li>
+    <li role="presentation" class="active"><a href="#scatterpanel" aria-controls="scatterplot" role="tab" data-toggle="tab">Scatterplot</a></li>
     <li role="presentation"><a href="#module" aria-controls="module" role="tab" data-toggle="tab">Module</a></li>
   </ul>
 
   <!-- Tab panes -->
   <div class="tab-content">
-    <div role="tabpanel" class="tab-pane active" id="scatterplot">
+    <div role="tabpanel" class="tab-pane active" id="scatterpanel">
       <div id='scatterplot'>
         <svg>
           <filter id="gaussianBlur" width="100%" height="100%" x="0" y="0">
