--- a/progressivis/server/templates/_navbar.html
+++ b/progressivis/server/templates/_navbar.html
@@ -14,10 +14,10 @@
       <ul class="nav navbar-nav">
         {{ caller() }}
       </ul>
-      <button id='start' type="button" class="disabled btn btn-default navbar-btn" aria-label="Start Button">
+      <button id='start' type="button" class="btn btn-default navbar-btn" aria-label="Start Button">
         <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
       </button>
-      <button id='stop' type="button" class="disabled btn btn-default navbar-btn" aria-label="Stop Button">
+      <button id='stop' type="button" class="btn btn-default navbar-btn" aria-label="Stop Button">
         <span class="glyphicon glyphicon-stop" aria-hidden="true"></span>
       </button>
       <button id='run_number' type="button" class="disabled btn btn-default navbar-btn" aria-label="Run number">
