update module page

--- a/progressivis/server/templates/range_query.html
+++ b/progressivis/server/templates/range_query.html
@@ -11,7 +11,7 @@ Range Query for module {{id}}
 
 {% block script %}
 var module_id = "{{id}}";
-$(document).ready(range_query_ready);
+$(document).ready(range_query.ready);
 {% endblock %}
 
 {% block content %}
