update requirements but pandas 0.17 dumps a core on csv load so stick to 16.2. Add a step function in schedudler to facilitate debugging. change HTTP restful verbs to simplify implementation.

--- a/progressivis/server/templates/_navbar.html
+++ b/progressivis/server/templates/_navbar.html
@@ -20,6 +20,9 @@
       <button id='stop' type="button" class="btn btn-default navbar-btn" aria-label="Stop Button">
         <span class="glyphicon glyphicon-stop" aria-hidden="true"></span>
       </button>
+      <button id='step' type="button" class="btn btn-default navbar-btn" aria-label="Step Button">
+        <span class="glyphicon glyphicon-step-forward" aria-hidden="true"></span>
+      </button>
       <button id='run_number' type="button" class="disabled btn btn-default navbar-btn" aria-label="Run number">
         000
       </button>
