--- a/progressivis/server/templates/range_query.html
+++ b/progressivis/server/templates/range_query.html
@@ -11,7 +11,7 @@ Range Query for module {{id}}
 {% endblock %}
 
 {% block extra_scripts %}
-<script src="{{ url_for('static', filename='d3.slider.js') }}"></script>
+<script src="{{ url_for('static', filename='lib/d3.slider.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/module.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/range_query.js') }}"></script>
 {% endblock %}
