--- a/progressivis/server/templates/_page_base.html
+++ b/progressivis/server/templates/_page_base.html
@@ -2,10 +2,10 @@
 
 {% block head %}
   <link href="{{ url_for('progressivis.server.progressivis_file', filename='css/progressivis.css') }}" rel="stylesheet">
-  <script src="{{ url_for('static', filename='lodash.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='jquery.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='lib/lodash.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='lib/jquery.min.js') }}"></script>
   <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='d3.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='lib/d3.min.js') }}"></script>
   <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/progressivis.js') }}"></script>
   {% block extra_scripts %}
   {% endblock %}
