--- a/progressivis/server/templates/dataframe.html
+++ b/progressivis/server/templates/dataframe.html
@@ -6,7 +6,7 @@ Progressivis Server
 
 {% block extra_scripts %}
 <link  type='text/css' href="{{ url_for('static', filename='css/datatables.min.css') }}"></link>
-<script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='datatables.min.js') }}"></script>
+<script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='lib/datatables.min.js') }}"></script>
 <script type="text/javascript" charset="utf8"  src="{{ url_for('progressivis.server.progressivis_file', filename='js/dataframe.js') }}"></script>
 {% endblock %}
 
