--- a/progressivis/server/templates/scatterplot.html
+++ b/progressivis/server/templates/scatterplot.html
@@ -10,7 +10,7 @@ Scatterplot for module {{id}}
 {% endblock %}
 
 {% block extra_scripts %}
-<script src="{{ url_for('static', filename='chroma.min.js') }}"></script>
+<script src="{{ url_for('static', filename='lib/chroma.min.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/module.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/history.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/scatterplot.js') }}"></script>
