--- a/progressivis/server/templates/scheduler.html
+++ b/progressivis/server/templates/scheduler.html
@@ -10,7 +10,7 @@ Progressivis Server
 {% endblock %}
 
 {% block extra_scripts %}
-<script src="{{ url_for('static', filename='cola.min.js') }}"></script>
+<script src="{{ url_for('static', filename='lib/cola.min.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/scheduler.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/module_graph.js') }}"></script>
 {% endblock %}
