--- a/progressivis/server/static/css/range_query.css
+++ b/progressivis/server/static/css/range_query.css
@@ -1,14 +1,14 @@
-#sliders {
+#sliders_old {
   margin-top: 15px;
   display: flex;
   align-items: center;
 }
 
-.slider {
+.slider_old {
   margin-left: 10px;
 }
 
-.slider-name {
+.slider-name_old {
   transform: rotate(-90deg);
   transform-origin: right 100%;
   margin-top: 5px;
