--- a/progressivis/server/templates/_page_base.html
+++ b/progressivis/server/templates/_page_base.html
@@ -5,7 +5,7 @@
   <script src="{{ url_for('static', filename='lib/lodash.min.js') }}"></script>
   <script src="{{ url_for('static', filename='lib/jquery.min.js') }}"></script>
   <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='lib/d3.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='lib/d3.v5.min.js') }}"></script>
   <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/progressivis.js') }}"></script>
   {% block extra_scripts %}
   {% endblock %}
