Fix scatterplot by protecting line_graph variables

--- a/progressivis/server/static/css/scatterplot.css
+++ b/progressivis/server/static/css/scatterplot.css
@@ -11,3 +11,12 @@
 #prevImages img {
   margin-left: 5px;
 }
+
+.axis path {
+  display: none;
+}
+
+.axis line {
+  stroke-opacity: 0.3;
+  shape-rendering: crispEdges;
+}
