--- a/progressivis/server/templates/range_query.html
+++ b/progressivis/server/templates/range_query.html
@@ -6,12 +6,12 @@ Range Query for module {{id}}
 
 {%block head %}
   {{ super() }}
-  <link href="{{ url_for('static', filename='css/d3.slider.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='css/multirange.css') }}" rel="stylesheet">
   <link href="{{ url_for('progressivis.server.progressivis_file', filename='css/range_query.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block extra_scripts %}
-<script src="{{ url_for('static', filename='lib/d3.slider.js') }}"></script>
+<script src="{{ url_for('static', filename='lib/multirange.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/line_graph.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/module.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/range_query.js') }}"></script>
