--- a/progressivis/server/templates/_page_base.html
+++ b/progressivis/server/templates/_page_base.html
@@ -6,6 +6,7 @@
   <script src="{{ url_for('static', filename='lib/jquery.min.js') }}"></script>
   <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
   <script src="{{ url_for('static', filename='lib/d3.v5.js') }}"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
   <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/progressivis.js') }}"></script>
   {% block extra_scripts %}
   {% endblock %}
@@ -33,6 +34,7 @@
     {% endif %}
     {% endwith %}
     <div class="row">
+      <div id='error'></div>
       {% block content %}
       {% endblock %}
     </div>
