--- a/progressivis/server/templates/_page_base.html
+++ b/progressivis/server/templates/_page_base.html
@@ -4,6 +4,7 @@
   <link href="{{ url_for('progressivis.server.progressivis_file', filename='css/progressivis.css') }}" rel="stylesheet">
   <script src="{{ url_for('static', filename='lib/lodash.min.js') }}"></script>
   <script src="{{ url_for('static', filename='lib/jquery.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='lib/jquery.sparkline.min.js') }}"></script>  
   <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
   <script src="{{ url_for('static', filename='lib/d3.v5.js') }}"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
