--- a/progressivis/server/templates/scatterplot.html
+++ b/progressivis/server/templates/scatterplot.html
@@ -31,8 +31,7 @@ $(document).ready(scatterplot_ready);
   <li><a href="#">Home</a></li>
   <li><a href="#">Scatterplot {{id}}</a></li>
 </ol>
-<div id="workHeatmap" style="width:512px; height:512px;"></div>
-<div id="witnessHeatmap" style="width:512px; height:512px;"><img>img...</img></div>
+<!--div id="witnessHeatmap" style="width:512px; height:512px;"><img>img...</img></div-->
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
   <h1 class='page-header'>Scatterplot for Module {{id}}</h1>
 
@@ -78,5 +77,5 @@ $(document).ready(scatterplot_ready);
     </div>
     <div role="tabpanel" class="tab-pane" id="module"><div id='module'></div></div>
   </div>
-
+<div id="heatmapContainer" style="width:512px; height:512px;visibility: hidden;"></div>
 {% endblock %}
