--- a/progressivis/server/templates/multiclass2d.html
+++ b/progressivis/server/templates/multiclass2d.html
@@ -15,6 +15,7 @@ MC Scatterplot for module {{id}}
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/module.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/history.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='lib/multiclass-density-maps.js') }}"></script>
+<script src="https://raw.githubusercontent.com/xtianpoli/Multiclass-Density-Maps/master/dist/multiclass-density-maps.js"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='lib/heatmap.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/heatmap-img.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/multiclass2d.js') }}"></script>
